--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "author": "Suz Hinton",
   "license": "MIT",
   "dependencies": {
+    "avrgirl-arduino": "^2.1.2",
     "keypress": "^0.2.1",
-    "avrgirl-arduino": "1.11.12",
     "minimist": "^1.2.0",
     "underscore": "^1.8.3"
   }
