--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "Suz Hinton",
   "license": "MIT",
   "dependencies": {
-    "avrgirl-arduino": "^2.1.2",
+    "avrgirl-arduino": "*",
     "keypress": "^0.2.1",
     "minimist": "^1.2.0",
     "underscore": "^1.8.3"
